fixes home page spacing issue at one responsive breakpoint

--- a/sass/src/main.scss
+++ b/sass/src/main.scss
@@ -18,7 +18,7 @@ p {
 }
 
 h3, h4 {
-    font-size: 24px;
+    font-size: 22px;
 }
 
 a {
@@ -315,6 +315,9 @@ article.journal .journal__title {
 @media only screen and (min-width: 960px){
     div#welcome__links {
         flex-direction: row;
+    }
+    section#welcome {
+        max-width: 700px; 
     }
     section#home__top {
         max-height: 400px;
